# magic_helper_vk_bot

./: .dockerignore  .env.example  .gitignore  ENVFILES.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: __main__.py  context.py  exceptions.py  models.py
app/helpers/: constants.py  params_models.py  params_parsers.py  players.py  regex_parser.py  time_help.py
app/storage/: database_controller.py  orm_models.py
app/utils/: checks.py  magic.py  messages.py  vk.py
app/views/: __init__.py  checks_view.py  eac_view.py  new_players_view.py
app/vk_bot/: events.py  routes.py
app/vk_bot/handlers/: __init__.py  abc.py  commands.py  magic_bot.py  reports.py
app/vk_bot/webhook/v1/: vk_webhook.py
docker/nginx/: Dockerfile  nginx.conf
docker/webhook/: Dockerfile  entrypoint.sh
docker/weebhook/: Dockerfile
